fixed center aligning in mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -24,7 +24,6 @@ body {
     font-family: 'Open Sans', sans-serif;
     font: 13.34px;
     font-size: small;
-    text-align: center;
 }
 
 
